[package]
name = "threadx-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
threadx-sys = { path = "../threadx-sys" }
num-traits = {version = "0.2.17", default-features = false}
num-derive = "0.4.1"
defmt = "0.3"
thiserror-no-std = "2.0.2"