[package]
# TODO(1) fix `authors` and `name` if you didn't use `cargo-generate`
authors = ["Sojan James <sojan.james@gmail.com>"]
name = "threadx-app"
edition = "2021"
version = "0.1.0"

[lib]
harness = false

# needed for each integration test
[[test]]
name = "integration"
harness = false

[dependencies]
board = { path = "../board" }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m-semihosting = "0.5.0"
threadx-sys = { path = "../../../threadx-sys"}
threadx-rs = { path = "../../../threadx-rs"}
embedded-alloc = "0.5.1"
thiserror-no-std = "2.0.2"
num-traits = {version = "0.2.17", default-features = false}
num-derive = "0.4.1"


[dev-dependencies]
defmt-test = "0.3"

[dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["stm32f103", "medium"]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

