[package]
authors = ["Sojan James <sojan.james@gmail.com>"]
name = "threadx-app"
edition = "2021"
version = "0.1.0"

[lib]
harness = false

# needed for each integration test
[[test]]
name = "integration"
harness = false


[dependencies]
board = { workspace = true }
cortex-m = { workspace = true, features = ["critical-section-single-core"] }
cortex-m-rt = { workspace = true}
defmt = { workspace = true}
defmt-rtt = { workspace = true}
panic-probe = { workspace = true, features = ["print-defmt"] }
cortex-m-semihosting = { workspace = true}
threadx-sys = { workspace = true}
threadx-rs = { workspace = true}
embedded-alloc = { workspace = true}
thiserror-no-std = { workspace = true}  
num-traits = {workspace = true, default-features = false}
num-derive = {workspace = true}
stm32f1xx-hal = {workspace = true, features = ["stm32f103", "medium"]}


# Non workspace application specific dependencies start here
## smoltcp = { version = "0.10.0", default-features = false, features = ["log","proto-ipv4"] }

[dev-dependencies]
defmt-test = "0.3"


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

