[package]
name = "target-tests"
version = "0.1.0"
edition = "2021"
publish = false

[[test]]
name = "stm32f103"
harness = false

[dev-dependencies]
board = { path = "../board" }

[dependencies]
board = { path = "../board" }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m-semihosting = "0.5.0"
threadx-sys = { path = "../../../threadx-sys"}
threadx-rs = { path = "../../../threadx-rs"}
embedded-alloc = "0.5.1"
thiserror-no-std = "2.0.2"
num-traits = {version = "0.2.17", default-features = false}
num-derive = "0.4.1"
defmt-test = "0.3.1"

[dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["stm32f103", "medium"]

# [features]
# default = ['defmt-trace']
# # these features are required by defmt
# defmt-default = []
# defmt-trace = []
# defmt-debug = []
# defmt-info = []
# defmt-warn = []
# defmt-error = []